test/fail/vardeclinitinferenceglobal.app
//can only be of a defined entity type
application test

  var a := 3;

  function do() {

    
  }
